--- a/package.json
+++ b/package.json
@@ -43,10 +43,10 @@
   },
   "homepage": "https://github.com/hmsk/vite-plugin-markdown/tree/main/#readme",
   "dependencies": {
-    "dom-serializer": "^2.0.0",
     "domhandler": "^5.0.0",
+    "domutils": "^3.2.2",
     "front-matter": "^4.0.0",
-    "htmlparser2": "^9.0.0",
+    "htmlparser2": "^10.0.0",
     "markdown-it": "^14.0.0"
   },
   "peerDependencies": {
