--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite-plugin-markdown",
-  "version": "3.0.0-2",
+  "version": "3.1.0",
   "description": "Import markdown files in vite",
   "exports": "./dist/index.js",
   "type": "module",
@@ -53,14 +53,17 @@
   "peerDependencies": {
     "vite": ">= 5.0.0"
   },
+  "optionalDependencies": {
+    "@babel/core": "^7.27.3",
+    "@babel/preset-react": "^7.27.1",
+    "@vue/compiler-sfc": "3.5.16"
+  },
   "devDependencies": {
-    "@babel/core": "7.27.3",
     "@types/babel__core": "7.20.5",
     "@types/markdown-it": "14.1.2",
     "@types/node": "20.17.6",
     "@typescript-eslint/eslint-plugin": "8.33.0",
     "@typescript-eslint/parser": "8.33.0",
-    "@vue/compiler-sfc": "3.5.16",
     "cypress": "14.4.0",
     "eslint": "9.27.0",
     "rollup": "^4.41.1",
