--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@vue/compiler-sfc": "3.5.16"
   },
   "devDependencies": {
+        "@eslint/js": "^9.39.1",
     "@types/babel__core": "7.20.5",
     "@types/markdown-it": "14.1.2",
     "@types/node": "20.17.6",
@@ -73,6 +74,7 @@
     "rimraf": "^6.1.2",
     "rollup": "^4.41.1",
     "typescript": "5.8.3",
+        "typescript-eslint": "^8.48.0",
     "vite": "5.4.10"
   },
   "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977"
