--- a/package.json
+++ b/package.json
@@ -1,81 +1,86 @@
 {
-  "name": "vite-plugin-markdown",
-  "version": "3.1.0",
-  "description": "Import markdown files in vite",
-  "exports": {
-    ".": "./dist/index.js",
-    "./ts": "./src/index.ts"
-  },
-  "type": "module",
-  "files": [
-    "dist",
-    "src"
-  ],
-  "scripts": {
-    "dev": "tsc -w -p .",
-    "build": "rimraf dist && tsc -p .",
-    "lint": "eslint . --ext .ts",
-    "test:acceptance": "npm run cypress:run",
-    "cypress:run": "cypress run --config-file test/acceptance/cypress.json",
-    "cypress:open": "cypress open --config-file test/acceptance/cypress.json"
-  },
-  "keywords": [
-    "vite",
-    "frontmatter",
-    "markdown",
-    "react",
-    "vue"
-  ],
-  "author": "Kengo Hamasaki <k.hamasaki@gmail.com>",
-  "contributors": [
-    "sapphi-red <green@sapphi.red>",
-    "Alex Zheng <zhibo90@gmail.com>",
-    "Dafrok <o.o@mug.dog>",
-    "Carretta Riccardo <carrystudios@gmail.com>",
-    "John Sanders <jws121295@gmail.com>",
-    "Stefan van Herwijnen <stefan@devliert.info>",
-    "Richard Raita <48387692+ric-rai@users.noreply.github.com>",
-    "Felix Fritz <felix.fritz@tink.com>"
-  ],
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/hmsk/vite-plugin-markdown.git"
-  },
-  "bugs": {
-    "url": "https://github.com/hmsk/vite-plugin-markdown/issues"
-  },
-  "homepage": "https://github.com/hmsk/vite-plugin-markdown/tree/main/#readme",
-  "dependencies": {
-    "dom-serializer": "^2.0.0",
-    "domhandler": "^5.0.0",
-    "domutils": "^3.2.2",
-    "front-matter": "^4.0.0",
-    "htmlparser2": "^10.0.0",
-    "markdown-it": "^14.0.0"
-  },
-  "peerDependencies": {
-    "vite": ">= 5.0.0"
-  },
-  "optionalDependencies": {
-    "@babel/core": "^7.27.3",
-    "@babel/preset-react": "^7.27.1",
-    "@vue/compiler-sfc": "3.5.16"
-  },
-  "devDependencies": {
+    "name": "vite-plugin-markdown",
+    "version": "3.1.0",
+    "description": "Import markdown files in vite",
+    "exports": {
+        ".": "./dist/index.js",
+        "./ts": "./src/index.ts"
+    },
+    "type": "module",
+    "files": [
+        "dist",
+        "src"
+    ],
+    "scripts": {
+        "dev": "tsc -w -p .",
+        "build": "rimraf dist && tsc -p .",
+        "lint": "eslint . --ext .ts",
+        "prettier": "prettier --check .",
+        "prettier:fix": "prettier --write .",
+        "test:acceptance": "npm run cypress:run",
+        "cypress:run": "cypress run --config-file test/acceptance/cypress.json",
+        "cypress:open": "cypress open --config-file test/acceptance/cypress.json"
+    },
+    "keywords": [
+        "vite",
+        "frontmatter",
+        "markdown",
+        "react",
+        "vue"
+    ],
+    "author": "Kengo Hamasaki <k.hamasaki@gmail.com>",
+    "contributors": [
+        "sapphi-red <green@sapphi.red>",
+        "Alex Zheng <zhibo90@gmail.com>",
+        "Dafrok <o.o@mug.dog>",
+        "Carretta Riccardo <carrystudios@gmail.com>",
+        "John Sanders <jws121295@gmail.com>",
+        "Stefan van Herwijnen <stefan@devliert.info>",
+        "Richard Raita <48387692+ric-rai@users.noreply.github.com>",
+        "Felix Fritz <felix.fritz@tink.com>"
+    ],
+    "license": "MIT",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/hmsk/vite-plugin-markdown.git"
+    },
+    "bugs": {
+        "url": "https://github.com/hmsk/vite-plugin-markdown/issues"
+    },
+    "homepage": "https://github.com/hmsk/vite-plugin-markdown/tree/main/#readme",
+    "dependencies": {
+        "dom-serializer": "^2.0.0",
+        "domhandler": "^5.0.0",
+        "domutils": "^3.2.2",
+        "front-matter": "^4.0.0",
+        "htmlparser2": "^10.0.0",
+        "markdown-it": "^14.0.0"
+    },
+    "peerDependencies": {
+        "vite": ">= 5.0.0"
+    },
+    "optionalDependencies": {
+        "@babel/core": "^7.27.3",
+        "@babel/preset-react": "^7.27.1",
+        "@vue/compiler-sfc": "3.5.16"
+    },
+    "devDependencies": {
         "@eslint/js": "^9.39.1",
-    "@types/babel__core": "7.20.5",
-    "@types/markdown-it": "14.1.2",
-    "@types/node": "20.17.6",
-    "@typescript-eslint/eslint-plugin": "8.33.0",
-    "@typescript-eslint/parser": "8.33.0",
-    "cypress": "14.4.0",
-    "eslint": "9.27.0",
-    "rimraf": "^6.1.2",
-    "rollup": "^4.41.1",
-    "typescript": "5.8.3",
+        "@types/babel__core": "7.20.5",
+        "@types/markdown-it": "14.1.2",
+        "@types/node": "20.17.6",
+        "@typescript-eslint/eslint-plugin": "8.33.0",
+        "@typescript-eslint/parser": "8.33.0",
+        "cypress": "14.4.0",
+        "eslint": "9.27.0",
+        "globals": "^16.5.0",
+        "jiti": "^2.6.1",
+        "prettier": "^3.7.3",
+        "rimraf": "^6.1.2",
+        "rollup": "^4.41.1",
+        "typescript": "5.8.3",
         "typescript-eslint": "^8.48.0",
-    "vite": "5.4.10"
-  },
-  "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977"
+        "vite": "5.4.10"
+    },
+    "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977"
 }
