--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -8,6 +8,8 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@types/react": "~18.2.79",
+        "@types/react-dom": "~18.2.25",
         "@vitejs/plugin-react-refresh": "1.3.6",
         "vite": "5.4.10",
         "vite-plugin-markdown": "file:../.."
